Bug 215884 - PME: Spurious native interrupt - AMD Ryzen 9 5900HS
Summary: PME: Spurious native interrupt - AMD Ryzen 9 5900HS
Status: RESOLVED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Run-Time-PM (show other bugs)
Hardware: AMD Linux
: P1 normal
Assignee: Mario Limonciello (AMD)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-25 11:13 UTC by sander44
Modified: 2025-03-01 16:13 UTC (History)
5 users (show)

See Also:
Kernel Version: 5.18.0-rc3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
config kernel (263.72 KB, text/plain)
2022-04-25 11:15 UTC, sander44
Details
potential patch (v1) (1.46 KB, patch)
2024-12-02 06:04 UTC, Mario Limonciello (AMD)
Details | Diff

Description sander44 2022-04-25 11:13:39 UTC
Hi Kernel Team,

I notice this:

[ 1347.987673] pcieport 0000:00:08.1: PME: Spurious native interrupt!


lspci -vvt
-[0000:00]-+-00.0  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne Root Complex
           +-00.2  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne IOMMU
           +-01.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-01.1-[01]--+-00.0  NVIDIA Corporation GA106M [GeForce RTX 3060 Mobile / Max-Q]
           |            \-00.1  NVIDIA Corporation Device 228e
           +-02.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-02.2-[02]----00.0  MEDIATEK Corp. Device 7961
           +-02.4-[03]----00.0  Intel Corporation Device f1aa
           +-08.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-08.1-[04]--+-00.0  Advanced Micro Devices, Inc. [AMD/ATI] Cezanne
           |            +-00.1  Advanced Micro Devices, Inc. [AMD/ATI] Renoir Radeon High Definition Audio Controller
           |            +-00.2  Advanced Micro Devices, Inc. [AMD] Family 17h (Models 10h-1fh) Platform Security Processor
           |            +-00.3  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
           |            +-00.4  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
           |            +-00.5  Advanced Micro Devices, Inc. [AMD] Raven/Raven2/FireFlight/Renoir Audio Processor
           |            \-00.6  Advanced Micro Devices, Inc. [AMD] Family 17h (Models 10h-1fh) HD Audio Controller
           +-14.0  Advanced Micro Devices, Inc. [AMD] FCH SMBus Controller
           +-14.3  Advanced Micro Devices, Inc. [AMD] FCH LPC Bridge
           +-18.0  Advanced Micro Devices, Inc. [AMD] Device 166a
           +-18.1  Advanced Micro Devices, Inc. [AMD] Device 166b
           +-18.2  Advanced Micro Devices, Inc. [AMD] Device 166c
           +-18.3  Advanced Micro Devices, Inc. [AMD] Device 166d
           +-18.4  Advanced Micro Devices, Inc. [AMD] Device 166e
           +-18.5  Advanced Micro Devices, Inc. [AMD] Device 166f
           +-18.6  Advanced Micro Devices, Inc. [AMD] Device 1670
           \-18.7  Advanced Micro Devices, Inc. [AMD] Device 1671



dmesg | grep PM
[    0.000000] efi: ACPI=0xec52a000 ACPI 2.0=0xec52a014 TPMFinalLog=0xec4f5000 SMBIOS=0xecbdc000 SMBIOS 3.0=0xecbdb000 ESRT=0xe992ac98 
[    0.003913] ACPI: TPM2 0x00000000EC358000 00004C (v04 ALASKA A M I    00000001 AMI  00000000)
[    0.003947] ACPI: Reserving TPM2 table memory at [mem 0xec358000-0xec35804b]
[    0.045400] ACPI: PM-Timer IO Port: 0x808
[    0.045460] PM: hibernation: Registered nosave memory: [mem 0x00000000-0x00000fff]
[    0.045462] PM: hibernation: Registered nosave memory: [mem 0x000a0000-0x000fffff]
[    0.045463] PM: hibernation: Registered nosave memory: [mem 0x09dbf000-0x0a000fff]
[    0.045464] PM: hibernation: Registered nosave memory: [mem 0x0a200000-0x0a20efff]
[    0.045464] PM: hibernation: Registered nosave memory: [mem 0xe7a3c000-0xe7ae4fff]
[    0.045465] PM: hibernation: Registered nosave memory: [mem 0xe992a000-0xe992afff]
[    0.045466] PM: hibernation: Registered nosave memory: [mem 0xeae0a000-0xec323fff]
[    0.045467] PM: hibernation: Registered nosave memory: [mem 0xec324000-0xec387fff]
[    0.045467] PM: hibernation: Registered nosave memory: [mem 0xec388000-0xec541fff]
[    0.045468] PM: hibernation: Registered nosave memory: [mem 0xec542000-0xecd3ffff]
[    0.045468] PM: hibernation: Registered nosave memory: [mem 0xecd40000-0xecdfefff]
[    0.045469] PM: hibernation: Registered nosave memory: [mem 0xee000000-0xf7ffffff]
[    0.045469] PM: hibernation: Registered nosave memory: [mem 0xf8000000-0xfcffffff]
[    0.045470] PM: hibernation: Registered nosave memory: [mem 0xfd000000-0xfdffffff]
[    0.045470] PM: hibernation: Registered nosave memory: [mem 0xfe000000-0xfeb7ffff]
[    0.045470] PM: hibernation: Registered nosave memory: [mem 0xfeb80000-0xfec01fff]
[    0.045471] PM: hibernation: Registered nosave memory: [mem 0xfec02000-0xfec0ffff]
[    0.045471] PM: hibernation: Registered nosave memory: [mem 0xfec10000-0xfec10fff]
[    0.045471] PM: hibernation: Registered nosave memory: [mem 0xfec11000-0xfecfffff]
[    0.045472] PM: hibernation: Registered nosave memory: [mem 0xfed00000-0xfed00fff]
[    0.045472] PM: hibernation: Registered nosave memory: [mem 0xfed01000-0xfed3ffff]
[    0.045473] PM: hibernation: Registered nosave memory: [mem 0xfed40000-0xfed44fff]
[    0.045473] PM: hibernation: Registered nosave memory: [mem 0xfed45000-0xfed7ffff]
[    0.045473] PM: hibernation: Registered nosave memory: [mem 0xfed80000-0xfed8ffff]
[    0.045474] PM: hibernation: Registered nosave memory: [mem 0xfed90000-0xfedc3fff]
[    0.045474] PM: hibernation: Registered nosave memory: [mem 0xfedc4000-0xfedc9fff]
[    0.045474] PM: hibernation: Registered nosave memory: [mem 0xfedca000-0xfedcbfff]
[    0.045475] PM: hibernation: Registered nosave memory: [mem 0xfedcc000-0xfedcefff]
[    0.045475] PM: hibernation: Registered nosave memory: [mem 0xfedcf000-0xfedd4fff]
[    0.045475] PM: hibernation: Registered nosave memory: [mem 0xfedd5000-0xfedd5fff]
[    0.045476] PM: hibernation: Registered nosave memory: [mem 0xfedd6000-0xfeffffff]
[    0.045476] PM: hibernation: Registered nosave memory: [mem 0xff000000-0xffffffff]
[    0.219869] Performance Events: Fam17h+ core perfctr, AMD PMU driver.
[    0.219869] NMI watchdog: Enabled. Permanently consumes one hw-PMU counter.
[    0.242584] ACPI: PM: Registering ACPI NVS region [mem 0x0a200000-0x0a20efff] (61440 bytes)
[    0.242584] ACPI: PM: Registering ACPI NVS region [mem 0xec388000-0xec541fff] (1810432 bytes)
[    0.242584] PM: RTC time: 10:32:02, date: 2022-04-25
[    0.261041] ACPI: PM: (supports S0 S4 S5)
[    0.261789] ACPI: PM: Power Resource [PG00]
[    0.262471] ACPI: PM: Power Resource [P0U0]
[    0.262528] ACPI: PM: Power Resource [P3U0]
[    0.262903] ACPI: PM: Power Resource [P0U1]
[    0.262963] ACPI: PM: Power Resource [P3U1]
[    0.263855] ACPI: PM: Power Resource [P0NV]
[    0.266020] ACPI: PM: Power Resource [PRWL]
[    0.266571] acpi PNP0A08:00: _OSC: OS supports [ExtendedConfig ASPM ClockPM Segments MSI HPX-Type3]
[    0.266750] acpi PNP0A08:00: _OSC: OS now controls [PCIeHotplug PME AER PCIeCapability]
[    0.267226] pci 0000:00:01.1: PME# supported from D0 D3hot D3cold
[    0.267374] pci 0000:00:02.2: PME# supported from D0 D3hot D3cold
[    0.267469] pci 0000:00:02.4: PME# supported from D0 D3hot D3cold
[    0.267605] pci 0000:00:08.1: PME# supported from D0 D3hot D3cold
[    0.268195] pci 0000:01:00.0: PME# supported from D0 D3hot
[    0.268993] pci 0000:02:00.0: PME# supported from D0 D1 D2 D3hot D3cold
[    0.269586] pci 0000:04:00.0: PME# supported from D1 D2 D3hot D3cold
[    0.269697] pci 0000:04:00.1: PME# supported from D1 D2 D3hot D3cold
[    0.269875] pci 0000:04:00.3: PME# supported from D0 D3hot D3cold
[    0.269966] pci 0000:04:00.4: PME# supported from D0 D3hot D3cold
[    0.270059] pci 0000:04:00.5: PME# supported from D0 D3hot D3cold
[    0.270150] pci 0000:04:00.6: PME# supported from D0 D3hot D3cold
[    1.009192] pcieport 0000:00:01.1: PME: Signaling with IRQ 31
[    1.009323] pcieport 0000:00:02.2: PME: Signaling with IRQ 32
[    1.009439] pcieport 0000:00:02.4: PME: Signaling with IRQ 33
[    1.009513] pcieport 0000:00:08.1: PME: Signaling with IRQ 34
[    1.165925] PM:   Magic number: 2:404:528
[    1.410258] usb usb2: We don't know the algorithms for LPM for this host, disabling LPM.
[    1.411943] usb usb4: We don't know the algorithms for LPM for this host, disabling LPM.
[    3.603772] PM: Image not found (code -22)
[    4.040572] RAPL PMU: API unit is 2^-32 Joules, 1 fixed counters, 163840 ms ovfl timer
[    4.040575] RAPL PMU: hw unit of domain package 2^-16 Joules
[   95.382275] PM: suspend entry (s2idle)
[   97.136055] PM: pm_system_irq_wakeup: 9 triggered acpi
[   97.140803] PM: pm_system_irq_wakeup: 9 triggered acpi
[  460.798729] PM: pm_system_irq_wakeup: 9 triggered acpi
[  462.420129] PM: suspend exit
[ 1347.987673] pcieport 0000:00:08.1: PME: Spurious native interrupt!
Comment 1 sander44 2022-04-25 11:15:09 UTC
Created attachment 300801 [details]
config kernel
Comment 2 Ozgur Kara 2022-04-25 17:25:25 UTC
Hello,

this error is more of a hardware interrupt sent by a PCIE device have you upgraded to latest BIOS version or latest driver for PCIE hardware? Which motherboard and please report BIOS version.
Comment 3 sander44 2022-04-26 06:15:20 UTC
Hi Ozgur Kara,


This is my system.

Kernel 5.18.0-rc3 vanilla
OS: Debian 11 / MXLinux

ASUS Laptop:

[    0.000000] DMI: ASUSTeK COMPUTER INC. ROG Zephyrus G14 GA401QM_GA401QM/GA401QM, BIOS GA401QM.410 12/13/2021


inxi -Fx
System:    Host: ionutnechita-arz2022 Kernel: 5.18.0-1-generic x86_64 bits: 64 compiler: gcc v: 10.2.1 Console: tty pts/1 
           Distro: MX-21.1_KDE_x64 Wildflower April 9  2022 base: Debian GNU/Linux 11 (bullseye) 
Machine:   Type: Laptop System: ASUSTeK product: ROG Zephyrus G14 GA401QM_GA401QM v: 1.0 serial: MBNRKD025051478 
           Mobo: ASUSTeK model: GA401QM v: 1.0 serial: A8C1XMC00UO UEFI: American Megatrends LLC. v: GA401QM.410 
           date: 12/13/2021 
Battery:   ID-1: BAT0 charge: 20.3 Wh (27.0%) condition: 75.1/76.0 Wh (98.9%) volts: 15.8 min: 15.8 
           model: ASUSTeK ASUS Battery status: Discharging 
CPU:       Info: 8-Core model: AMD Ryzen 9 5900HS with Radeon Graphics bits: 64 type: MT MCP arch: Zen 3 rev: 0 cache: 
           L2: 4 MiB 
           flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm bogomips: 105546 
           Speed: 1787 MHz min/max: 400/4680 MHz boost: enabled Core speeds (MHz): 1: 1787 2: 1621 3: 1824 4: 1917 5: 1703 
           6: 2104 7: 1917 8: 2156 9: 1291 10: 1696 11: 1960 12: 1661 13: 1926 14: 1603 15: 2115 16: 2064 
Graphics:  Device-1: NVIDIA GA106M [GeForce RTX 3060 Mobile / Max-Q] vendor: ASUSTeK driver: N/A bus-ID: 01:00.0 
           Device-2: Advanced Micro Devices [AMD/ATI] Cezanne vendor: ASUSTeK driver: amdgpu v: kernel bus-ID: 04:00.0 
           Display: server: X.Org 1.20.13 driver: loaded: amdgpu,ati unloaded: fbdev,modesetting,vesa 
           resolution: 2560x1440~120Hz 
           OpenGL: renderer: AMD RENOIR (DRM 3.46.0 5.18.0-1-generic LLVM 12.0.1) v: 4.6 Mesa 21.2.5 direct render: Yes 
Audio:     Device-1: NVIDIA vendor: ASUSTeK driver: snd_hda_intel v: kernel bus-ID: 01:00.1 
           Device-2: Advanced Micro Devices [AMD/ATI] Renoir Radeon High Definition Audio driver: snd_hda_intel v: kernel 
           bus-ID: 04:00.1 
           Device-3: Advanced Micro Devices [AMD] Raven/Raven2/FireFlight/Renoir Audio Processor vendor: ASUSTeK driver: N/A 
           bus-ID: 04:00.5 
           Device-4: Advanced Micro Devices [AMD] Family 17h HD Audio vendor: ASUSTeK driver: snd_hda_intel v: kernel 
           bus-ID: 04:00.6 
           Sound Server-1: ALSA v: k5.18.0-1-generic running: yes 
           Sound Server-2: PulseAudio v: 14.2 running: yes 
Network:   Device-1: MEDIATEK vendor: AzureWave driver: mt7921e v: kernel port: e000 bus-ID: 02:00.0 
           IF: wlan0 state: up mac: x
           IF-ID-1: docker0 state: down mac: x
Bluetooth: Device-1: IMC Networks Wireless_Device type: USB driver: btusb v: 0.8 bus-ID: 3-4:3 
           Report: hciconfig ID: hci0 rfk-id: 0 state: up address: x bt-v: 3.0 lmp-v: 5.2 
Drives:    Local Storage: total: 953.87 GiB used: 41.71 GiB (4.4%) 
           ID-1: /dev/nvme0n1 vendor: Intel model: SSDPEKNU010TZ size: 953.87 GiB temp: 21.9 C 
Partition: ID-1: / size: 250.25 GiB used: 36.81 GiB (14.7%) fs: ext4 dev: /dev/nvme0n1p2 
           ID-2: /boot/efi size: 252 MiB used: 274 KiB (0.1%) fs: vfat dev: /dev/nvme0n1p1 
           ID-3: /home size: 678.39 GiB used: 4.89 GiB (0.7%) fs: ext4 dev: /dev/nvme0n1p4 
Swap:      ID-1: swap-1 type: partition size: 8 GiB used: 0 KiB (0.0%) dev: /dev/nvme0n1p3 
Sensors:   System Temperatures: cpu: 31.0 C mobo: N/A gpu: amdgpu temp: 29.0 C 
           Fan Speeds (RPM): cpu: 0 
Info:      Processes: 380 Uptime: 3m Memory: 30.83 GiB used: 2.17 GiB (7.0%) Init: systemd runlevel: 5 Compilers: gcc: 10.2.1 
           Packages: 2551 Shell: Bash v: 5.1.4 inxi: 3.3.06
Comment 4 sander44 2022-04-28 05:50:18 UTC
This message(PME: Spurious native interrupt!) appears when I insert the headphones(beyerdynamic dt 770 pro 250 ohm) into the audio jack.
Comment 5 sander44 2022-05-01 12:45:39 UTC
This message not appear in 5.15 LTS Kernel Branch.
Comment 6 Ozgur Kara 2022-05-01 14:25:29 UTC
(In reply to sander44 from comment #5)
> This message not appear in 5.15 LTS Kernel Branch.

Hello sander44,

its good news, so make sure you are using an up-to-date kernel and if you are using a kernel based on a distribution please inform your distro maintainers as well.
Comment 7 sander44 2022-05-01 14:35:21 UTC
Hi Ozgur Kara,

Understood. I use vanilla kernel from kernel.org.
Comment 8 Mario Limonciello (AMD) 2022-06-20 16:37:54 UTC
Since you isolated the cause (it happens when plugging in headphone jack) and you can confirm that it doesn't happen in 5.15, could you perhaps bisect between 5.15 and 5.18-rc3 to further determine the commit that changed the behavior?
Comment 9 Mario Limonciello (AMD) 2024-12-01 14:23:07 UTC
@sander44:

Do you still have this hardware and this issue?  If I got you a patch could you test it?
Comment 10 sander44 2024-12-01 14:28:11 UTC
Hello, I could test if you have a patch.
Comment 11 sander44 2024-12-01 14:28:45 UTC
My laptop has no hardware problems.
Comment 12 Mario Limonciello (AMD) 2024-12-02 06:04:24 UTC
Created attachment 307306 [details]
potential patch (v1)

Here's a potential patch that should update some strapping to avoid this issue.  I'm not 100% sure it's the right end point for your device though, so please let me know if it doesn't help.
Comment 13 Gabriel Marcano 2024-12-10 22:44:34 UTC
I have a Dell G5 5505 SE (AMD Ryzen 9 4900H laptop processor with AMD ATI Radeon RX 5600M) running Gentoo Linux with kernel 6.12.1 and I have this issue. To me it looks like a kernel regression (or it was hiding before) as I've tried with three different BIOS versions (1.20, 1.23, 1.24), but on 6.12.1 I can reproduce the spurious interrupts on all 3 of them. While on BIOS 1.20 I booted back to the oldest kernel I still had installed (6.9.8), and I see no spurious interrupt notifications.

One critical note is that on my system the spurious interrupts _only_ occur when running off the internal battery. They stop happening when AC power is introduced, and return when it is removed. They approximately 1 per second, but it's not extremely precise.

This is the log I see in my kernel logs:
  kernel: pcieport 0000:00:08.1: PME: Spurious native interrupt!

My lspci -vt output:
-[0000:00]-+-00.0  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne Root Complex
           +-00.2  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne IOMMU
           +-01.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-01.1-[01-03]----00.0-[02-03]----00.0-[03]--+-00.0  Advanced Micro Devices, Inc. [AMD/ATI] Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT]
           |                                            \-00.1  Advanced Micro Devices, Inc. [AMD/ATI] Navi 10 HDMI Audio
           +-01.2-[04]----00.0  Sandisk Corp SanDisk Extreme Pro / WD Black SN750 / PC SN730 / Red SN700 NVMe SSD
           +-02.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-02.1-[05]----00.0  Realtek Semiconductor Co., Ltd. RTL8111/8168/8211/8411 PCI Express Gigabit Ethernet Controller
           +-02.2-[06]----00.0  Intel Corporation Wi-Fi 6 AX200
           +-08.0  Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
           +-08.1-[07]--+-00.0  Advanced Micro Devices, Inc. [AMD/ATI] Renoir [Radeon Vega Series / Radeon Vega Mobile Series]
           |            +-00.1  Advanced Micro Devices, Inc. [AMD/ATI] Renoir Radeon High Definition Audio Controller
           |            +-00.2  Advanced Micro Devices, Inc. [AMD] Family 17h (Models 10h-1fh) Platform Security Processor
           |            +-00.3  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
           |            +-00.4  Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
           |            +-00.5  Advanced Micro Devices, Inc. [AMD] ACP/ACP3X/ACP6x Audio Coprocessor
           |            \-00.6  Advanced Micro Devices, Inc. [AMD] Family 17h/19h/1ah HD Audio Controller
           +-14.0  Advanced Micro Devices, Inc. [AMD] FCH SMBus Controller
           +-14.3  Advanced Micro Devices, Inc. [AMD] FCH LPC Bridge
           +-18.0  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 0
           +-18.1  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 1
           +-18.2  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 2
           +-18.3  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 3
           +-18.4  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 4
           +-18.5  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 5
           +-18.6  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 6
           \-18.7  Advanced Micro Devices, Inc. [AMD] Renoir Device 24: Function 7

Let me know if you'd like more information or logs or anything else. I'm also familiar with rebuilding the kernel (and a little with Linux kernel programming) to I am more than able to try patches. I don't think this laptop has an easily accessible serial port, else I'd even volunteer doing some kernel debugging. I don't have a lot of time but I may try to bisect the kernel to identify the commit that triggered the possible regression. First I have some newer kernels than 6.9.8 I can try to try to narrow down the bounds of when it was introduced, before I start building kernels.

As for the potential patch above, I can't figure out what devices that covers (is there a way to query the kernel about which NBIO is being used by the AMD hardware?). I'll try the patch just in case, at worst it isn't the right device for my system and just takes up code space in the kernel binary.

If you think this is a different issue than the one for the 5900HS I can open a new issue.
Comment 14 Gabriel Marcano 2024-12-10 22:59:07 UTC
I tried the patch with kernel 6.12.1, and it seems to be working! I'm not seeing the spurious native interrupts when running on battery power anymore. I'll continue testing for a few days to confirm, and I'll try updating to 6.12.4 as well.
Comment 15 Mario Limonciello (AMD) 2024-12-11 00:48:15 UTC
#13/#14:

Happening once a second is a really surprising behavior.  

When this "type" of issue was reproduced on newer hardware it was a single spurious event on audio jack plug in  / plug out.

Are you having some other functional problems that the sound stack is seeing plug in / plug out events at runtime constantly?

IoW I'm wondering if this behavior you see is a sign of a bigger problem with your laptop.

Nonetheless that's great news to hear it helped! I'll get it rebased and ready to submit upstream.  I'm assuming you don't mind me using a tag for you?

@sander44:

Can you please test it too?
Comment 16 Gabriel Marcano 2024-12-11 01:55:31 UTC
As far as I can tell there's nothing wrong with the laptop (other than a amdgpu issue where the discrete GPU doesn't like coming back from power management suspend: https://gitlab.freedesktop.org/drm/amd/-/issues/1707#note_2696564).

My sound stack is actually perfectly fine. I've noticed no issues with audio jack detection (although to be honest as of late I haven't plugged anything into that jack for at least a year). I'm not seeing any spurious jack events (nor is my Desktop Environment seeing them), nor did I see them before applying the patch. The only real symptom I could see on my end of the spurious native interrupts was that they were there taking up kernel log space-- they didn't seem to impact my use of the laptop. If you'd like I can probably try to bisect to see what commit introduced the bug on my part, since kernel 6.8 didn't emit the messages. I'm just not sure when I'll have the time.

Perfectly fine to tag me. Thanks!

(And thanks for your work on ACPI and other stuff, I've been delving down that rabbit hole also for this laptop to reverse engineer the WMI controls over its RGB controller, and saw an old WMI patch request with your name on it for an issue I also ran into about duplicate WMI GUIDs or something like that).
Comment 17 Mario Limonciello (AMD) 2024-12-11 02:48:07 UTC
> If you'd like I can probably try to bisect to see what commit introduced the
> bug on my part,

Yes; if/when you have time that would be interesting for me to understand.

> Perfectly fine to tag me. Thanks!

https://lore.kernel.org/amd-gfx/20241211024414.7840-1-mario.limonciello@amd.com/T/#u

> And thanks for your work on ACPI and other stuff

Sure!
Comment 18 sander44 2024-12-11 10:25:24 UTC
Hi Mario Limonciello,

I integrated your patch over kernel version 6.12.3. And I don't see this issue anymore. I think everything is fixed now.

Thank you.
Comment 19 Mario Limonciello (AMD) 2024-12-11 18:23:36 UTC
Thanks guys!  I'll get it pulled into amdgpu.
Comment 20 Mario Limonciello (AMD) 2024-12-22 17:18:22 UTC
Fixed with 3f6f237b9dd189e1fb85b8a3f7c97a8f27c1e49a. This will backport to remaining stable branches too.

Note You need to log in before you can comment on or make changes to this bug.